minor UI changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 
     <div id="recordCanvas" class="displayNone">
         <div class="topBarContainer">
-            <span class="homeLogo">BTC TRACKER</span>
+            <span class="topBarLogo">
+                <a href="/"><span class="homeLogo">BTC TRACKER</span></a>
+                <a href="http://www.suhailgulzar.com" target="_blank"><img class="author_logo" src="logo.jpg"></a>
+            </span>
             <span id="topBtns">
                 <span id="stopBtn" class="start button smallbtn" onclick="stopTimer()">STOP</span>
                 <span class="start button smallbtn" onclick="resetTimer()">RESET</span>
